# dual_stage_rl

./: .gitignore  README.md  pyproject.toml
Z_JungwonFolders/backup_policy/: evaluate_diagnostics.py  plot_results.py  plot_rollouts_3d.py  replay_buffer.py  td3.py  train.py  visualize_policy.py
Z_JungwonFolders/bcbf/: backup_policy.py  barriers.py  constraints.py  dynamics_jax.py  flow.py  lqrgain.py  rows.py  set_indicator.py
Z_JungwonFolders/desired_trajectory/: desired_trajectory.py
Z_JungwonFolders/env/: dynamics.py  run_env.py
Z_JungwonFolders/models/: td3_safe_arrival_actor  td3_safe_arrival_actor_optimizer  td3_safe_arrival_critic  td3_safe_arrival_critic_optimizer
Z_JungwonFolders/results/: td3_safe_arrival_eval.npy
Z_JungwonFolders/sac/: __init__.py  model.py  plot_sac_results.py  powerloop_env.py  replay_buffer.py  sac.py  train.py
Z_JungwonFolders/scripts/: run_bcbf_rows.py  run_indicator.py  run_lqr.py
ds_rl/systems/quadrotor/: dynamics.py  run_env.py
ps2_sac/: MJDATA.TXT  README.md  mjmodel.xml  quadrotor_trained_rollout.npz  requirements.txt
ps2_sac/src/: main.py  train_agent.py
ps2_sac/src/agents/: mock_actor.py  ps2_action.py  sac.py
ps2_sac/src/cil/: action_filter.py  constraint_provider.py  main.py  projection.py  test_mock_actor.py
ps2_sac/src/configs/: quadrotor.py
ps2_sac/src/drafts/: sac.py
ps2_sac/src/envs/quadrotor/: __init__.py  constraints.py  dynamics.py  env.py  (+6 more)
ps2_sac/src/utils/: training_utils.py
ps2_sac/tools/: fix_imports_to_src.py.save
ps2_sac/venv1/: pyvenv.cfg
scripts/: run_env.py  run_lqr.py
